--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Shadow Priest Rankings - MoP</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="last-updated" style="text-align:center; margin-bottom:20px; font-size:14px; color:#ccc;">
+    Last updated: loading...
+  </div>
   <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
-  <div id="last-updated" style="text-align:center; margin-top:20px; font-size:14px; color:#ccc;">
-    Last updated: loading...
-  </div>
   <script src="script.js"></script>
 </body>
 </html>
