--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="boss-background"></div>
   <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
