--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <title>Shadow Priest Rankings - MoP</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div id="boss-background"></div>
   <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
+  <canvas id="dpsChart" width="600" height="400"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
