--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
+  <div id="last-updated" class="last-updated" aria-live="polite"></div>
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
   <script src="script.js"></script>
