--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Shadow Priest Rankings - MoP</title>
+  <title>Shadow Priest Top 100 Rankings - MoP Classic</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
+  <h1>Shadow Priest Top 100 Rankings - MoP Classic</h1>
   <div id="last-updated" class="last-updated" aria-live="polite"></div>
 
   <!-- NEW: Raid selection tabs -->
