--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Shadow Priest Top 100 Rankings - MoP Classic</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- Import Fira Sans Black from Google Fonts -->
+  https://fonts.googleapis.com/css2?family=Fira+Sans:wght@900&display=swap
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
