--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Shadow Priest Top 100 Rankings - MoP Classic</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Shadow Priest Rankings - MoP</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Shadow Priest Top 100 Rankings - MoP Classic</h1>
+  <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
   <div id="last-updated" class="last-updated" aria-live="polite"></div>
-
-  <!-- NEW: Raid selection tabs -->
-  <div id="raid-tabs" class="raid-tabs" role="tablist" aria-label="Choose raid"></div>
-
-  <!-- Existing boss menu + rankings -->
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
-
   <script src="script.js"></script>
 </body>
 </html>
