--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shadow Priest Rankings - MoP</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Shadow Priest Top 100 - MoP Classic</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Shadow Priest Rankings - Mogu'shan Vaults</h1>
+  <h1>Shadow Priest Top 100 - MoP Classic</h1>
+
+  <!-- New: raid menu -->
+  <nav id="raid-menu" aria-label="Raid selection">
+    <!-- JS will populate buttons for MSV / HoF / ToES -->
+  </nav>
+
   <div id="last-updated" class="last-updated" aria-live="polite"></div>
   <div id="boss-buttons"></div>
   <div id="rankings"></div>
+
+  <!-- Make sure this file name matches your deployed bundle -->
   <script src="script.js"></script>
 </body>
 </html>
