--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta charset="UTF-8" />
   <title>Shadow Priest Top 100 - MoP Classic</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Wowhead tooltips -->
+  <script>
+  // Optional config; tweak to taste
+    const whTooltips = {
+      colorLinks: false,
+      iconizeLinks: false,
+      renameLinks: false
+    // You can also set domain/locale explicitly:
+    // domain: 'www.wowhead.com', locale: 'en_us'
+    };
+  </script>
+  https://wow.zamimg.com/widgets/power.js
+
 </head>
 <body>
   <h1>Shadow Priest Top 100 - MoP Classic</h1>
