--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   </section>
 
   <!-- Your app logic (kept the original filename with space) -->
-  <script src="script 6.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
