--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Wowhead/ZAM tooltips -->
   <script>
-    window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: true };
+    window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
   </script>
   <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
 </head>
