--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <body>
   <h1>Shadow Priest Top 100 – MoP Classic</h1>
 
+  <div class="last-updated" id="last-updated" role="status" aria-live="polite">
+  Loading last updated…
+  </div>
+
   <!-- Tabs for raid selection -->
   <nav id="raid-menu" aria-label="Raid selection"></nav>
 
@@ -25,7 +29,6 @@
 
   <!-- Rankings column (centered by your CSS) -->
   <section id="rankings">
-    <div class="last-updated" id="last-updated">Loading last updated…</div>
     <div class="talent-summary" aria-label="Popular talents by tier"></div>
   </section>
 
