--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="last-updated" id="last-updated" role="status" aria-live="polite">
   Loading last updated…
   </div>
+  <input type="search" id="search-input" placeholder="Search for a player...">
   <nav id="raid-menu" aria-label="Raid selection"></nav>
   <div id="boss-buttons" role="group" aria-label="Bosses"></div>
   <section id="rankings">
