--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div id="boss-buttons" role="group" aria-label="Bosses"></div>
   <section id="rankings">
     <div class="talent-summary" aria-label="Popular talents by tier"></div>
+    <button id="copy-link-btn">Copy Link</button>
   </section>
 
   <script src="script.js" defer></script>
