--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Add these for Roboto font from Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Roboto -->
+  https://fonts.googleapis.com
+  https://fonts.gstatic.com
+  https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap
+
   <script>
     window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
   </script>
-  <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
+  https://wow.zamimg.com/widgets/power.js
 </head>
 <body>
   <div class="main-container">
@@ -31,11 +32,11 @@
         </div>
         <button id="copy-link-btn">Copy Link</button>
       </div>
-      <section id="rankings">
-        </section>
+      <section id="rankings"></section>
     </main>
   </div>
 
+  <!-- Keep defer so DOM is parsed before the script executes -->
   <script src="script.js" defer></script>
 </body>
 </html>
