--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Shadow Priest Haste Calculator</title>
 https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap
+https://wow.zamimg.com/widgets/power.js
 <style>
     body {
         font-family: 'Roboto', sans-serif;
@@ -29,7 +30,6 @@ https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap
     .input-group {
         display: flex;
         justify-content: center;
-        align-items: center;
         margin-bottom: 20px;
     }
     input {
@@ -72,8 +72,21 @@ https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap
         vertical-align: middle;
         margin-right: 8px;
     }
+    .progress-bar {
+        width: 100%;
+        background: #333;
+        border-radius: 6px;
+        overflow: hidden;
+        height: 10px;
+        margin-top: 6px;
+    }
+    .progress {
+        height: 10px;
+        background: #ffcc00;
+        width: 0%;
+        transition: width 0.4s ease;
+    }
 </style>
-<script src="https.com/widgets/power.js
 </head>
 <body>
 <div class="container">
@@ -115,19 +128,34 @@ function calculateHaste() {
         const data = breakpoints[spell];
         let extraTicks = 0;
         let nextBP = 'Maxed';
+        let nextBPValue = null;
+
         for (let i = 0; i < data.points.length; i++) {
             if (effectiveHaste >= data.points[i]) {
                 extraTicks++;
             } else {
                 nextBP = `${data.points[i]}% (${calculateRating(data.points[i])} rating)`;
+                nextBPValue = data.points[i];
                 break;
             }
         }
+
+        // Progress bar calculation
+        let progressPercent = 100;
+        if (nextBPValue !== null) {
+            const prevBP = data.points[extraTicks - 1] || 0;
+            progressPercent = ((effectiveHaste - prevBP) / (nextBPValue - prevBP)) * 100;
+            if (progressPercent < 0) progressPercent = 0;
+            if (progressPercent > 100) progressPercent = 100;
+        }
+
         tableHTML += `
             <tr>
-                <td><img src="${data.icon}" alt="${spell}"> https://www.wowhead.com/spell=${data.id}</td>
-                <td>${extraTicks}</td>
-                <td>${nextBP}</td>
+                <td><img src="${data.icon}" alt="${spell}"> <a href="https://www.wowhead.com/spell=${data.id}" class="wowhead>${extraTicks}</td>
+                <td>
+                    ${nextBP}
+                    <div class="progress-bar"><div class="progress" style="width:${progressPercent}%;"></div></div>
+                </td>
             </tr>`;
     }
     document.getElementById('tickTable').innerHTML = tableHTML;
