--- a/app/index.html
+++ b/app/index.html
@@ -1,178 +1,204 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shadow Priest Haste Calculator</title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-<script src="https://wow.zamimg.com/widgets/power.js"></script>
-<style>
-    body {
-        font-family: 'Roboto', sans-serif;
-        background: #121212;
-        color: #f5f5f5;
-        margin: 0;
-    }
-    .container {
-        max-width: 700px;
-        margin: 50px auto;
-        background: #1e1e2f;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-        text-align: center;
-    }
-    h1 {
-        margin-bottom: 20px;
-        color: #ffcc00;
-    }
-    .input-group {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-    }
-    input {
-        width: 60%;
-        padding: 12px;
-        font-size: 18px;
-        border: 2px solid #ffcc00;
-        border-radius: 8px;
-        outline: none;
-        background: #2c2c3e;
-        color: #fff;
-        text-align: center;
-        transition: 0.3s;
-    }
-    input:focus {
-        border-color: #ffd633;
-        box-shadow: 0 0 10px #ffcc00;
-    }
-    .result {
-        font-size: 20px;
-        margin-bottom: 20px;
-    }
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
-    th, td {
-        padding: 12px;
-        border-bottom: 1px solid #333;
-        text-align: center;
-    }
-    th {
-        background: #29293d;
-        color: #ffcc00;
-    }
-    td img {
-        width: 24px;
-        height: 24px;
-        vertical-align: middle;
-        margin-right: 8px;
-    }
-    .progress-bar {
-        width: 100%;
-        background: #333;
-        border-radius: 6px;
-        overflow: hidden;
-        height: 10px;
-        margin-top: 6px;
-    }
-    .progress {
-        height: 10px;
-        background: #ffcc00;
-        width: 0%;
-        transition: width 0.4s ease;
-    }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Shadow Priest Haste Calculator</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis href="https://fonts.gstatic.com"m/css2?family=Roboto:wght@400;700&display=swap
+
+  <!-- Wowhead power tooltips -->
+  https://wow.zamimg.com/widgets/power.js
+
+  <style>
+    :root { color-scheme: dark; }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #121212;
+      color: #f5f5f5;
+      margin: 0;
+    }
+    .container {
+      max-width: 700px;
+      margin: 50px auto;
+      background: #1e1e2f;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #ffcc00;
+    }
+    .input-group {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 60%;
+      padding: 12px;
+      font-size: 18px;
+      border: 2px solid #ffcc00;
+      border-radius: 8px;
+      outline: none;
+      background: #2c2c3e;
+      color: #fff;
+      text-align: center;
+      transition: 0.3s;
+    }
+    input:focus {
+      border-color: #ffd633;
+      box-shadow: 0 0 10px #ffcc00;
+    }
+    .result {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      padding: 12px;
+      border-bottom: 1px solid #333;
+      text-align: center;
+    }
+    th {
+      background: #29293d;
+      color: #ffcc00;
+    }
+    td img {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+    .progress-bar {
+      width: 100%;
+      background: #333;
+      border-radius: 6px;
+      overflow: hidden;
+      height: 10px;
+      margin-top: 6px;
+    }
+    .progress {
+      height: 10px;
+      background: #ffcc00;
+      width: 0%;
+      transition: width 0.4s ease;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-    <h1>Shadow Priest Haste Calculator</h1>
-    <div class="input-group">
-        <input type="number" id="hasteRating" placeholder="Enter your Haste Rating" oninput="calculateHaste()">
-    </div>
-    <div class="result" id="hasteResult"></div>
-    <table>
-        <thead>
-            <tr>
-                <th>Spell</th>
-                <th>Extra Ticks</th>
-                <th>Next Breakpoint</th>
-            </tr>
-        </thead>
-        <tbody id="tickTable"></tbody>
-    </table>
-</div>
+  <div class="container">
+    <h1>Shadow Priest Haste Calculator</h1>
 
-<script>
-const breakpoints = {
-    "Shadow Word: Pain": {id: 589, points: [8.32, 24.97, 41.68], icon: "https://wow.zamimg.com/images/wow/icons/large/spell_shadow_shadowwordpain.jpg"},
-    "Vampiric Touch": {id: 34914, points: [9.99, 30.01, 49.95], icon: "https://wow.zamimg.com/images/wow/icons/large/spell_holy_stoicism.jpg"},
-    "Devouring Plague": {id: 2944, points: [8.28, 24.92, 41.74], icon: "https://wow.zamimg.com/images/wow/icons/large/spell_shadow_devouringplague.jpg"}
-};
+    <div class="input-group">
+      <input type="number" id="hasteRating" min="0" placeholder="Enter your Haste Rating" />
+    </div>
 
-function calculateHaste() {
-    const rating = parseFloat(document.getElementById('hasteRating').value);
-    if (isNaN(rating) || rating < 0) return;
+    <div class="result" id="hasteResult">Effective Haste: <b>0.00%</b></div>
 
-    const buff = 0.05; // Shadowform
-    const effectiveHaste = ((1 + rating / 42500) * (1 + buff) - 1) * 100;
+    <table>
+      <thead>
+        <tr>
+          <th>Spell</th>
+          <th>Extra Ticks</th>
+          <th>Next Breakpoint</th>
+        </tr>
+      </thead>
+      <tbody id="tickTable"></tbody>
+    </table>
+  </div>
 
-    document.getElementById('hasteResult').innerHTML = `Effective Haste: <b>${effectiveHaste.toFixed(2)}%</b>`;
+  <script>
+    const breakpoints = {
+      "Shadow Word: Pain": {
+        id: 589,
+        points: [8.32, 24.97, 41.68],
+        icon: "https://wow.zamimg.com/images/wow/icons/large/spell_shadow_shadowwordpain.jpg"
+      },
+      "Vampiric Touch": {
+        id: 34914,
+        points: [9.99, 30.01, 49.95],
+        icon: "https://wow.zamimg.com/images/wow/icons/large/spell_holy_stoicism.jpg"
+      },
+      "Devouring Plague": {
+        id: 2944,
+        points: [8.28, 24.92, 41.74],
+        icon: "https://wow.zamimg.com/images/wow/icons/large/spell_shadow_devouringplague.jpg"
+      }
+    };
 
-    let tableHTML = '';
-    for (const spell in breakpoints) {
-        const data = breakpoints[spell];
-        let extraTicks = 0;
-        let nextBP = 'Maxed';
-        let nextBPValue = null;
+    function calculateHaste() {
+      const rating = Number(document.getElementById('hasteRating').value);
+      if (Number.isNaN(rating) || rating < 0) return;
 
-        for (let i = 0; i < data.points.length; i++) {
-            if (effectiveHaste >= data.points[i]) {
-                extraTicks++;
-            } else {
-                nextBP = `${data.points[i]}% (${calculateRating(data.points[i])} rating)`;
-                nextBPValue = data.points[i];
-                break;
-            }
-        }
+      const buff = 0.05; // Shadowform
+      const effectiveHaste = ((1 + rating / 42500) * (1 + buff) - 1) * 100;
 
-        // Progress bar calculation
-        let progressPercent = 100;
-        if (nextBPValue !== null) {
-            const prevBP = data.points[extraTicks - 1] || 0;
-            progressPercent = ((effectiveHaste - prevBP) / (nextBPValue - prevBP)) * 100;
-            if (progressPercent < 0) progressPercent = 0;
-            if (progressPercent > 100) progressPercent = 100;
-        }
+      document.getElementById('hasteResult').innerHTML =
+        `Effective Haste: <b>${effectiveHaste.toFixed(2)}%</b>`;
 
-        tableHTML += `
-            <tr>
-                <td><img src="${data.icon}" alt="${spell}"> <a href="https://www.wowhead.com/spell=${data.id}" target="_blank" data-wowhead="spell=${data.id}">${spell}</a></td>
-                <td>${extraTicks}</td>
-                <td>
-                    ${nextBP}
-                    <div class="progress-bar"><div class="progress" style="width:${progressPercent}%;"></div></div>
-                </td>
-            </tr>`;
-    }
-    document.getElementById('tickTable').innerHTML = tableHTML;
+      let tableHTML = '';
+      for (const [spell, data] of Object.entries(breakpoints)) {
+        let extraTicks = 0;
+        let nextBP = 'Maxed';
+        let nextBPValue = null;
 
-    // Re-initialize Wowhead tooltips
-    if (typeof $WowheadPower !== 'undefined') {
-        $WowheadPower.refreshLinks();
-    }
-}
+        for (let i = 0; i < data.points.length; i++) {
+          if (effectiveHaste >= data.points[i]) {
+            extraTicks++;
+          } else {
+            nextBPValue = data.points[i];
+            nextBP = `${nextBPValue}% (${calculateRating(nextBPValue)} rating)`;
+            break;
+          }
+        }
 
-// Corrected function to calculate required haste rating for a given percentage
-function calculateRating(targetPercent) {
-    const buff = 0.05;
-    const targetHasteWithBuffs = (1 + targetPercent / 100);
-    const targetHasteWithoutBuffs = targetHasteWithBuffs / (1 + buff);
-    return Math.round((targetHasteWithoutBuffs - 1) * 42500);
-}
-</script>
+        let progressPercent = 100;
+        if (nextBPValue !== null) {
+          const prevBP = data.points[extraTicks - 1] ?? 0;
+          progressPercent = Math.min(
+            100,
+            Math.max(0, ((effectiveHaste - prevBP) / (nextBPValue - prevBP)) * 100)
+          );
+        }
+
+        tableHTML += `
+          <tr>
+            <td>
+              <img src="${data.icon}" alt="${spell}">
+              <a href="https://www.wowhead.com/spell=${data.id}" target="_blank" data-wowhead="aTicks}</td>
+            <td>
+              ${nextBP}
+              <div class="progress-bar"><div class="progress" style="width:${progressPercent}%"></div></div>
+            </td>
+          </tr>`;
+      }
+      document.getElementById('tickTable').innerHTML = tableHTML;
+
+      // Refresh Wowhead tooltips
+      if (typeof $WowheadPower !== 'undefined') {
+        $WowheadPower.refreshLinks();
+      }
+    }
+
+    // Calculate the rating needed to reach a given haste percent (before buffs)
+    function calculateRating(targetPercent) {
+      const buff = 0.05;
+      const targetHasteWithBuffs = 1 + targetPercent / 100;
+      const targetHasteWithoutBuffs = targetHasteWithBuffs / (1 + buff);
+      return Math.round((targetHasteWithoutBuffs - 1) * 42500);
+    }
+
+    document.getElementById('hasteRating').addEventListener('input', calculateHaste);
+    calculateHaste(); // initialize on load
+  </script>
 </body>
 </html>
